# micropython_tutorial

./: .gitignore  README.md  pymakr.conf  pyproject.toml
src/: grove_lcd_i2c.py  lcd_api.py  main.py
