[tool.poetry]
name = "micropython_tutorial"
version = "0.1.0"
description = ""
authors = ["Lari Liuhamo <lari.liuhamo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-ampy = "^1.1.0"
rshell = "^0.0.31"

[tool.poetry.dev-dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
